--- a/package.json
+++ b/package.json
@@ -3,9 +3,8 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
     "start:dev": "nodemon ./src/server/server.js",
-    "start": "node ./src/server/server.js"
+    "prod": "node ./src/server/server.js"
   },
   "keywords": [],
   "author": "",
